src/driver/ajinextek/AXL(Library)/Delphi/AXA.pas


    //==External Trigger Mode 함수
    //지정한 입력모듈의 선택된 채널들의 외부 트리거 모드를 시작한다.
    //==================================================================================================//
    // lSize           : 지정한 입력 모듈에서 외부트리거를 사용 할 채널갯수
    // *lpChannelPos   : 지정한 입력 모듈에서 외부트리거를 사용 할 채널의 Index
    function AxaiExternalStartADC (lModuleNo : LongInt; lSize : LongInt; lpChannelPos : PLongInt) : DWord; stdcall;
    //지정한 입력모듈의 외부트리거 모드를 정지한다.
    function AxaiExternalStopADC (lModuleNo : LongInt) : DWord; stdcall;
    //지정한 입력모듈의 Fifo상태를 반환한다.
    //==================================================================================================//
    // *dwpStatus      : FIFO_DATA_EXIST(0)
    //                 : FIFO_DATA_EMPTY(1)
    //                 : FIFO_DATA_HALF(2)
    //                 : FIFO_DATA_FULL(6)
    //==================================================================================================//
    function AxaiExternalReadFifoStatus (lModuleNo : LongInt; dwpStatus : PDWord) : DWord; stdcall;
    //지정한 입력모듈의 외부신호에 의해 변환된 A/D값을 읽어옴.
    // lSize           : 지정한 입력 모듈에서 변환된 A/D값을 읽어올 채널의 갯수(AxaiExternalStartADC에 사용한 채널갯수와 동일 해야됨)
    // *lpChannelPos   : 지정한 입력 모듈에서 변환된 A/D값을 읽어올 채널의 Index(AxaiExternalStartADC에 사용한 채널의 Index와 동일 해야됨)
    // lDataSize       : 외부트리거에 의해 A/D변환된 값을 한번에 읽어 올 최대 데이타의 갯수
    // lBuffSize       : 외부에서(사용자 Program) 할당한 Data Buffer의 Size
    // lStartDataPos   : 외부에서(사용자 Program) 할당한 Data Buffer에 저장 시작 할 위치
    // *dpVolt         : A/D변환된 값을 할당 받을 2차원 배열 포인트(dpVlot[Channel][Count])
    // *lpRetDataSize  : A/D변환된 값이 Data Buffer에 실제 할당된 갯수
    // *dwpStatus      : A/D변환된 값을 Fifo(H/W Buffer)로 부터 읽을 때 Fifo상태를 반환함.
    function AxaiExternalReadVoltage (lModuleNo : LongInt; lSize : LongInt; lpChannelPos : PLongInt; lDataSize : LongInt; lBuffSize : LongInt; lStartDataPos : LongInt; dpVolt : PDouble; lpRetDataSize : PLongInt; dwpStatus : PDWord) : DWord; stdcall;

    //==출력 모듈 Info
    //지정한 출력 채널 번호로 모듈 번호를 확인한다.
    function AxaoInfoGetModuleNoOfChannelNo (lChannelNo : LongInt; lpModuleNo : PLongInt) : DWord; stdcall;

    //아날로그 출력 모듈의 전체 채널 개수를 확인한다.
    function AxaoInfoGetChannelCount (lpChannelCount : PLongInt) : DWord; stdcall;

    //========== 출력 모듈 설정 및 확인 함수
    //지정한 출력 채널에 출력 전압 범위를 설정한다
    //==================================================================================================//
    // AO4R, AO2Hx
    // dMinVolt    : -10V
    // dMaxVolt    : 10V
    //==================================================================================================//
    function AxaoSetRange (lChannelNo : LongInt; dMinVolt : Double; dMaxVolt : Double) : DWord; stdcall;

    //지정한 출력 채널의 출력 전압 범위를 확인한다.
    //==================================================================================================//
    // AO4R, AO2Hx
    // *dpMinVolt  : -10V
    // *dpMaxVolt  : 10V
    //==================================================================================================//
    function AxaoGetRange (lChannelNo : LongInt; dpMinVolt : PDouble; dpMaxVolt : PDouble) : DWord; stdcall;

    //지정한 여러 출력 채널에 출력 전압 범위를 설정한다.
    //==================================================================================================//
    // AO4R, AO2Hx
    // dMinVolt    : -10V
    // dMaxVolt    : 10V
    //==================================================================================================//
    function AxaoSetMultiRange (lSize : LongInt; lpChannelNo : PLongInt; dMinVolt : Double; dMaxVolt : Double) : DWord; stdcall;

    //지정한 출력 채널에 입력된 전압이 출력 된다.
    function AxaoWriteVoltage (lChannelNo : LongInt; dVolt : Double) : DWord; stdcall;

    //지정한 여러 출력 채널에 입력된 전압이 출력 된다.
    function AxaoWriteMultiVoltage (lSize : LongInt; lpChannelNo : PLongInt; dpVolt : PDouble) : DWord; stdcall;

    //지정한 출력 채널에 입력된 전압이 출력 된다.
    function AxaoWriteDigit (lChannelNo : LongInt; dwDigit : DWord) : DWord; stdcall;

    //지정한 여러 출력 채널에 입력된 전압이 출력 된다.
    function AxaoWriteMultiDigit (lSize : LongInt; lpChannelNo : PLongInt; dpDigit : PDWord) : DWord; stdcall;

    //지정한 출력 채널에 출력되는 전압 값을 확인한다.
    function AxaoReadVoltage (lChannelNo : LongInt; dpVolt : PDouble) : DWord; stdcall;

    //지정한 여러 출력 채널에 출력되는 전압 값을 확인한다.
    function AxaoReadMultiVoltage (lSize : LongInt; lpChannelNo : PLongInt; dpVolt : PDouble) : DWord; stdcall;

    //지정한 출력 채널에 출력되는 전압 값을 확인한다.
    function AxaoReadDigit (lChannelNo : LongInt; upDigit : PDWord) : DWord; stdcall;

    //지정한 여러 출력 채널에 출력되는 전압 값을 확인한다.
    function AxaoReadMultiDigit (lSize : LongInt; lpChannelNo : PLongInt; dpDigit : PDWord) : DWord; stdcall;

    //============================ AXA User Define Pattern Generator ============================
    // Pattern Generator 관련 함수들은 PCI-R32IO_RTEX_LCM 에서만 지원
    // Channel User Define Pattern Generator를 설정 하는 함수 이다.
    // AxaoPgSetUserInterval에 설정딘 시간 마다 Pattern을 순차적으로 출력한다.
    // lLoopCnt       : '0'(입력된 패턴을 무한대로 반복), 'value' : 지정된 횟수 만큼 입력 패턴 출력 후 마지막 패턴 유지
    //                : (MAX : 60000)
    // lPatternSize   : 입력 패턴 갯수(MAX : 8192) , PCI-R
    function AxaoPgSetUserPatternGenerator (lChannelNo : LongInt; lLoopCnt : LongInt; lPatternSize : LongInt; dpPattern : PDouble) : DWord; stdcall;
    //AxaoPgSetUserPatternGenerator와 동일 기능, Digit 값으로 표현
    function AxaoPgSetUserPatternGeneratorDigit (lChannelNo : LongInt; lLoopCnt : LongInt; lPatternSize : LongInt; pDigitPattern : PDWord) : DWord; stdcall;

    // User Define Pattern Generator를 확인 하는 함수 이다.
    function AxaoPgGetUserPatternGenerator (lChannelNo : LongInt; lpLoopCnt : PLongInt; lpPatternSize : PLongInt; dpPattern : PDouble) : DWord; stdcall;
    // User Define Pattern Generator를 확인 하는 함수 이다. Digit값으로 확인
    function AxaoPgGetUserPatternGeneratorDigit (lChannelNo : LongInt; lpLoopCnt : PLongInt; lpPatternSize : PLongInt; pDigitPattern : PDWord) : DWord; stdcall;

    // 해당 Channel의 Pattern Generator Interval을 설정 하는 함수 이다.
    // 단위는 us(기본 Resolution : 500uSec)
    function AxaoPgSetUserInterval (lChannelNo : LongInt; dInterval : Double) : DWord; stdcall;

    // 해당 Channel의 Pattern Generator Interval을 확인 하는 함수 이다.
    function AxaoPgGetUserInterval (lChannelNo : LongInt; dpInterval : PDouble) : DWord; stdcall;

    // 해당 Channel의 Pattern Index / Loop Cnt를 확인 하는 함수 이다.
    // Status의 경우 아래의 Status를 확인 할 수 있다.
    // lpIndexNum : 현재 User Pattern의 Index
    // lpLoopCnt : 현재 구동중인 Loop 횟수
    // dwpInBusy : Pattern Generator의 구동 유무
    function AxaoPgGetStatus (lChannelNo : LongInt; lpIndexNum : PLongInt; lpLoopCnt : PLongInt; dwpInBusy : PDWord) : DWord; stdcall;

    // 해당 Channel의 User Define Pattern Generator를 시작 하는 함수이다. (AO 출력 시작)
    // Start Channel 번호를 배열로 입력
    // 입력된 채널에 대하여 동시에 패턴 생성 기능을 시작한다.
    function AxaoPgSetUserStart (lpChannelNo : PLongInt; lSize : LongInt) : DWord; stdcall;

    // 해당 Channel의 User Define Pattern Generator를 정지 하는 함수이다. (AO 출력 정지)
    // 출력 정지시 출력값은 0Volt로 전환된다.
    function AxaoPgSetUserStop (lpChannelNo : PLongInt; lSize : LongInt) : DWord; stdcall;

    // Pattern Data를 Clear 하는 함수. (0x00으로 모든 영역을 Reset)
    function AxaPgSetUserDataReset (lChannelNo : LongInt) : DWord; stdcall;

    // 지정한 출력 모듈의 Network이 끊어 졌을 경우 출력 상태를 채널 별로 설정하는 함수이다.
    //===============================================================================================//
    // lChannelNo  : 채널 번호(분산형 슬레이브 제품만 지원 함)
    // dwSetValue  : 설정 할 변수 값(Default는 Network 끊어 지기 전 상태 유지)
    //             : 0 --> Network 끊어 지기 전 상태 유지
    //             : 1 --> Analog Max
    //             : 2 --> Analog MIN
    //             : 3 --> User Vaule(Default user value는 0V로 설정됨, AxaoSetNetworkErrorUserValue() 함수로 변경가능)
    //             : 4 --> Analog 0 V
    //===============================================================================================//
    function AxaoSetNetworkErrorAct (lChannelNo : LongInt; dwSetValue : DWord) : DWord; stdcall;

    // 지정한 출력 모듈의 Network이 끊어 졌을 경우 출력 상태를 출력 Byte 단위로 설정한다.
    //===============================================================================================//
    // lChannelNo  : 채널 번호(분산형 슬레이브 제품만 지원 함)
    // dVolt       : 사용자 정의 아날로그 출력 전압 값
    //===============================================================================================//
    function AxaoSetNetworkErrorUserValue (lChannelNo : LongInt; dVolt : Double) : DWord; stdcall;


implementation

const
